working with mmap now, bugfixing

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/Dexagod/RDF-autocomplete#readme",
   "dependencies": {
+    "mmap-kit": "file:mmap/mmap-kit/",
+    "bignum": "^0.13.0",
     "rimraf": "^2.6.2"
   }
 }
