--- a/package.json
+++ b/package.json
@@ -15,10 +15,5 @@
   "bugs": {
     "url": "https://github.com/Dexagod/RDF-autocomplete/issues"
   },
-  "homepage": "https://github.com/Dexagod/RDF-autocomplete#readme",
-  "dependencies": {
-    "mmap-kit": "file:mmap/mmap-kit/",
-    "bignum": "^0.13.0",
-    "rimraf": "^2.6.2"
-  }
+  "homepage": "https://github.com/Dexagod/RDF-autocomplete#readme"
 }
